@@ -1,4 +1,4 @@
 *~
 assets/*
 *.log
-
+*.swp
