@@ -16,3 +16,7 @@ Yii Migration Tool v1.0 (based on Yii v1.1.13)
 
 Create new migration '/var/www/Yii-Tutorial/protected/migrations/m130128_204446_create_user_table.php'? (yes|no) [no]:yes
 New migration created successfully.
+
+
+protected/runtime/gii-1.1.13/ModelCode.php -- I think this is a file that should be included in .gitignore.... not sure though
+protected/models/User.php -- File generated by Gii. Goto this url 'http://localhost/Yii-Tutorial/index.php?r=gii/model' to generate this. The password is 'password', fill in 'user' for Table name, click preview, then generate.
